# introduction_in_oop_classes

./: README.md  pyproject.toml
src/: exception.py  print_mixin.py  product.py  successor_classes_product.py  utils.py
tests/: conftest.py  test_print_mixin.py  test_product.py  test_successor_classes_product.py
